--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
   <title>TestApp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="styles.a6170a48cf8345f830e9.bundle.css" rel="stylesheet" />
-</head>
+<link href="styles.a6170a48cf8345f830e9.bundle.css" rel="stylesheet"/></head>
 
 <body>
   <app-root>Loading...</app-root>
-  <script type="text/javascript" src="inline.62bd71634f20ddc0d73d.bundle.js"></script>
-  <script type="text/javascript" src="polyfills.f29d15febef270053b68.bundle.js"></script>
-  <script type="text/javascript" src="vendor.b6bf74c5f9667e7ddedb.bundle.js"></script>
-  <script type="text/javascript" src="main.178cdc6705670fe02dd3.bundle.js"></script>
-</body>
+<script type="text/javascript" src="inline.3c03867b59df50115665.bundle.js"></script><script type="text/javascript" src="polyfills.f29d15febef270053b68.bundle.js"></script><script type="text/javascript" src="vendor.b6bf74c5f9667e7ddedb.bundle.js"></script><script type="text/javascript" src="main.b9bb8b6aaaae439cfcf9.bundle.js"></script></body>
 
 </html>
